tests/NormalTests/paczka2/big_fuzzy/52188317.err
Error in line 4: ryB S911 -1,1
Error in line 11: 1nmFzA4G A326 41,15
Error in line 12: DIe A326 15,9
Error in line 17: ryB S911 91,3
Error in line 19: S678 S911 7,5
Error in line 24: S678 A326 210,95
Error in line 6: 1nmFzA4G A326 14,7
Error in line 23: DIe S678 71,8
Error in line 31: DIe A65 59,3
Error in line 13: hHNEtY3 S911 52,9
Error in line 36: o5B5O S678 36,4
Error in line 70: hHNEtY3 S678 46,6
Error in line 69: o5B5O S678 107,8
Error in line 74: 1nmFzA4G S911 86,9
Error in line 86: S678 A65 95,8
Error in line 81: 1nmFzA4G A65 34,1
Error in line 98: yoNV A326 8,1
Error in line 104: yoNV S678 6,40
Error in line 99: yoNV S678 2,5
Error in line 105: yoNV A326 82,5
Error in line 93: ryB S911 97,3
Error in line 109: hHNEtY3 A326 97,14
Error in line 102: hHNEtY3 A326 28,3
Error in line 116: yoNV A326 94,3
Error in line 119: hHNEtY3 A65 74,3
Error in line 118: 1nmFzA4G S911 239,8
Error in line 126: DIe A326 30,3
Error in line 151: yoNV S678 14,7
Error in line 158: o5B5O S911 3K,2
Error in line 164: 1nmFzA4G A65 206,0
Error in line 157: hHNEtY3 A326 56,2
Error in line 174: ryB A65 63,9
Error in line 182: 1nmFzA4G A66 64,2
Error in line 194: DIe S678 77,6
Error in line 199: o5B5O S911 52,2
Error in line 210: S678 S678 86,8
Error in line 202: 1nmFzA4G A65 69,1
Error in line 216: yoNV A65 -1,1
Error in line 218: ?A;26
Error in line 211: hHNEtY3 A326 46,9
Error in line 201: o5B5O A326 1,5
Error in line 212: S678 S911 47,9
Error in line 222: S678 A326 1,7
Error in line 203: ryB A65 49,6
Error in line 245: o5B5O S911 94,5
Error in line 248: o5B5O S678 34,0
